WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31057
[Qt] QGLLauncher does not support drag&drop of local files.
https://bugs.webkit.org/show_bug.cgi?id=31057
Summary
[Qt] QGLLauncher does not support drag&drop of local files.
Yael
Reported
2009-11-03 06:20:52 PST
QGLLauncher does not support drag&drop of local files the way QtLauncher does. Nothing happens when dropping a file on it. Also, when dropping a file in the address bar, cannot load it, unless you manually delete the training space.
Attachments
Patch
(1.44 KB, patch)
2009-11-17 11:32 PST
,
Yael
kenneth
: review+
kenneth
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2009-11-17 11:32:04 PST
Created
attachment 43371
[details]
Patch Set the flag in QGraphicsWebView and enable processing of QGraphicsWebView::dragEnterEvent() .
Kenneth Rohde Christiansen
Comment 2
2009-11-17 11:35:28 PST
Did you see if there were any commit changing this? You mentioned that it used to work right?
Yael
Comment 3
2009-11-17 11:43:30 PST
(In reply to
comment #2
)
> Did you see if there were any commit changing this? You mentioned that it used > to work right?
I did not mention that it used to work :-) I simply enabled it, and it worked with no other modifications.
Kenneth Rohde Christiansen
Comment 4
2009-11-17 11:46:18 PST
Ah sorry :-)
Yael
Comment 5
2009-11-17 11:58:07 PST
Committed
r51083
<
http://trac.webkit.org/changeset/51083
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug