[Qt] QGLLauncher does not support drag&drop of local files https://bugs.webkit.org/show_bug.cgi?id=31057

Reviewed by Kenneth Rohde Christiansen.

Enable accepting files in QGraphicsWebView.

* Api/qgraphicswebview.cpp:
(QGraphicsWebView::QGraphicsWebView):
(QGraphicsWebView::dragEnterEvent):



Canonical link: https://commits.webkit.org/42512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51083 268f45cc-cd09-0410-ab3c-d52691b4dbfc